[tool.poetry]
name = "binance-p2p-exchange"
version = "0.1.0"
description = "make your exchanging easy"
authors = ["Никита Козырев <kozyrevnm@gmail.com>"]
readme = "README.md"
packages = [{include = "binance_p2p_exchange"}]

[tool.poetry.scripts]
script = ".get_currency:start"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
fastapi = {extras = ["all"], version = "^0.88.0"}


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
